deployments/pihole/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
