deployments/pihole/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web-ingress
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole-ui.elmatcha.lan
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pihole-web
              port:
                number: 80
